# lesson_31_homework

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
ads/: admin.py  models.py  permissions.py
ads/migrations/: 0001_initial.py  0002_initial.py
ads/serializers/: ad.py  selection.py
ads/urls/: ad.py  selection.py
ads/views/: ad.py  category.py  main_page.py  selection.py
fixtures/: ads.json  categories.json  locations.json  user.json
homework_31/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_retrieve_test.py  ads_list_test.py  selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
